--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -170,7 +170,11 @@
 
 
 
-<!-- CARROSSEL DE DEPOIMENTOS - 12 CLIENTES, 3 POR VEZ -->
+<!-- ================================ -->
+<!--   CARROSSEL DE 12 DEPOIMENTOS   -->
+<!--   3 VISÍVEIS / PASSA 1 POR VEZ  -->
+<!-- ================================ -->
+
 <section class="py-16 bg-white relative overflow-hidden">
 
   <!-- Selo -->
@@ -185,7 +189,7 @@
   </h2>
 
   <p class="text-center text-slate-600 max-w-2xl mx-auto mb-10">
-    Resultados reais de pessoas que transformaram a alimentação com nossos planos e receitas!
+    Transformações reais de pessoas que escolheram cuidar da saúde com nossos planos e receitas!
   </p>
 
   <!-- Bloco confiança -->
@@ -197,18 +201,19 @@
     </div>
   </div>
 
-  <!-- Carrossel -->
-  <div class="relative max-w-6xl mx-auto px-4">
-    
+  <!-- CARROSSEL -->
+  <div class="relative max-w-6xl mx-auto px-4 select-none">
+
     <div class="overflow-hidden relative">
       <div id="carouselWrapper" class="flex transition-transform duration-700">
 
-        <!-- 12 DEPOIMENTOS (3 EM CADA SLIDE) -->
-        <!-- ======== SLIDE 1 ======== -->
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 min-w-full px-4">
+        <!-- ======================= -->
+        <!--  12 CARDS (3 por vez)   -->
+        <!-- ======================= -->
 
-          <!-- Depoimento 1 -->
-          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft">
+        <!-- CARD 1 -->
+        <div class="w-1/3 px-4 shrink-0">
+          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=47" class="w-14 h-14 rounded-full object-cover">
               <div>
@@ -217,11 +222,13 @@
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“O combo dieta + receitas mudou tudo pra mim. Estou muito mais disciplinada!”</p>
+            <p class="text-slate-700 mt-2">“O combo dieta + receitas mudou tudo para mim!”</p>
           </div>
+        </div>
 
-          <!-- Depoimento 2 -->
-          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft">
+        <!-- CARD 2 -->
+        <div class="w-1/3 px-4 shrink-0">
+          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=5" class="w-14 h-14 rounded-full object-cover">
               <div>
@@ -230,11 +237,13 @@
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Receitas incríveis! Fácil de seguir, gostoso e saudável.”</p>
+            <p class="text-slate-700 mt-2">“Receitas fáceis, gostosas e práticas!”</p>
           </div>
+        </div>
 
-          <!-- Depoimento 3 -->
-          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft">
+        <!-- CARD 3 -->
+        <div class="w-1/3 px-4 shrink-0">
+          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=15" class="w-14 h-14 rounded-full object-cover">
               <div>
@@ -243,16 +252,13 @@
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Plano super claro e direto. Já tive ótimos resultados!”</p>
+            <p class="text-slate-700 mt-2">“Já tive ótimos resultados! Simples e completo.”</p>
           </div>
-
         </div>
 
-        <!-- ======== SLIDE 2 ======== -->
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 min-w-full px-4">
-
-          <!-- Depoimento 4 -->
-          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft">
+        <!-- CARD 4 -->
+        <div class="w-1/3 px-4 shrink-0">
+          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=32" class="w-14 h-14 rounded-full object-cover">
               <div>
@@ -261,11 +267,13 @@
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“As receitas me ajudaram muito na correria do dia a dia.”</p>
+            <p class="text-slate-700 mt-2">“As receitas facilitaram muito minha rotina!”</p>
           </div>
+        </div>
 
-          <!-- Depoimento 5 -->
-          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft">
+        <!-- CARD 5 -->
+        <div class="w-1/3 px-4 shrink-0">
+          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=12" class="w-14 h-14 rounded-full object-cover">
               <div>
@@ -274,11 +282,13 @@
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Material impecável e super motivador!”</p>
+            <p class="text-slate-700 mt-2">“Plano completo, direto e super motivador!”</p>
           </div>
+        </div>
 
-          <!-- Depoimento 6 -->
-          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft">
+        <!-- CARD 6 -->
+        <div class="w-1/3 px-4 shrink-0">
+          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=68" class="w-14 h-14 rounded-full object-cover">
               <div>
@@ -287,16 +297,13 @@
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Perdi 4kg em 3 semanas comendo muito bem.”</p>
+            <p class="text-slate-700 mt-2">“Perdi 4kg em 3 semanas comendo bem.”</p>
           </div>
-
         </div>
 
-        <!-- ======== SLIDE 3 ======== -->
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 min-w-full px-4">
-
-          <!-- Depoimento 7 -->
-          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft">
+        <!-- CARD 7 -->
+        <div class="w-1/3 px-4 shrink-0">
+          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=44" class="w-14 h-14 rounded-full object-cover">
               <div>
@@ -307,9 +314,11 @@
             <div class="text-yellow-400">★★★★★</div>
             <p class="text-slate-700 mt-2">“Receitas deliciosas! Não parece dieta.”</p>
           </div>
+        </div>
 
-          <!-- Depoimento 8 -->
-          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft">
+        <!-- CARD 8 -->
+        <div class="w-1/3 px-4 shrink-0">
+          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=38" class="w-14 h-14 rounded-full object-cover">
               <div>
@@ -318,11 +327,13 @@
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Me fez gostar de cozinhar! Muito bom.”</p>
+            <p class="text-slate-700 mt-2">“Me fez gostar de cozinhar novamente!”</p>
           </div>
+        </div>
 
-          <!-- Depoimento 9 -->
-          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft">
+        <!-- CARD 9 -->
+        <div class="w-1/3 px-4 shrink-0">
+          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=59" class="w-14 h-14 rounded-full object-cover">
               <div>
@@ -333,14 +344,11 @@
             <div class="text-yellow-400">★★★★★</div>
             <p class="text-slate-700 mt-2">“Transformou meus hábitos!”</p>
           </div>
-
         </div>
 
-        <!-- ======== SLIDE 4 ======== -->
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 min-w-full px-4">
-
-          <!-- Depoimento 10 -->
-          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft">
+        <!-- CARD 10 -->
+        <div class="w-1/3 px-4 shrink-0">
+          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=71" class="w-14 h-14 rounded-full object-cover">
               <div>
@@ -349,11 +357,13 @@
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“Muito completo e fácil de aplicar!”</p>
+            <p class="text-slate-700 mt-2">“Muito completo e fácil de seguir!”</p>
           </div>
+        </div>
 
-          <!-- Depoimento 11 -->
-          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft">
+        <!-- CARD 11 -->
+        <div class="w-1/3 px-4 shrink-0">
+          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=7" class="w-14 h-14 rounded-full object-cover">
               <div>
@@ -362,11 +372,13 @@
               </div>
             </div>
             <div class="text-yellow-400">★★★★★</div>
-            <p class="text-slate-700 mt-2">“O melhor plano que já comprei na internet.”</p>
+            <p class="text-slate-700 mt-2">“O melhor plano que já comprei.”</p>
           </div>
+        </div>
 
-          <!-- Depoimento 12 -->
-          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft">
+        <!-- CARD 12 -->
+        <div class="w-1/3 px-4 shrink-0">
+          <div class="bg-slate-50 border border-slate-200 rounded-2xl p-6 shadow-soft h-full">
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=22" class="w-14 h-14 rounded-full object-cover">
               <div>
@@ -377,7 +389,6 @@
             <div class="text-yellow-400">★★★★★</div>
             <p class="text-slate-700 mt-2">“Finalmente algo que funciona pra mim!”</p>
           </div>
-
         </div>
 
       </div>
@@ -391,6 +402,42 @@
 
   </div>
 </section>
+
+<!-- SCRIPT DO CARROSSEL -->
+<script>
+const wrapper = document.getElementById("carouselWrapper");
+const cards = wrapper.children;
+let index = 0;
+
+function getCardWidth() {
+  return cards[0].offsetWidth;
+}
+
+function updateCarousel() {
+  const cardWidth = getCardWidth();
+  wrapper.style.transform = `translateX(-${index * cardWidth}px)`;
+}
+
+document.getElementById("nextBtn").onclick = () => {
+  index = (index + 1) % cards.length;
+  updateCarousel();
+};
+
+document.getElementById("prevBtn").onclick = () => {
+  index = index > 0 ? index - 1 : cards.length - 1;
+  updateCarousel();
+};
+
+// Auto-play
+setInterval(() => {
+  index = (index + 1) % cards.length;
+  updateCarousel();
+}, 6000);
+
+// Ajusta caso a tela seja redimensionada
+window.addEventListener("resize", updateCarousel);
+</script>
+
 
 <!-- SCRIPT DO CARROSSEL -->
 <script>
