--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -277,7 +277,7 @@
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=12" class="w-14 h-14 rounded-full object-cover">
               <div>
-                <h4 class="font-bold">Ana Beatriz</h4>
+                <h4 class="font-bold">Felipe Torres</h4>
                 <p class="text-sm text-slate-500">Usuária verificada</p>
               </div>
             </div>
@@ -322,7 +322,7 @@
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=38" class="w-14 h-14 rounded-full object-cover">
               <div>
-                <h4 class="font-bold">André Lima</h4>
+                <h4 class="font-bold">Priscila Lopes</h4>
                 <p class="text-sm text-slate-500">Usuário verificado</p>
               </div>
             </div>
