--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -337,7 +337,7 @@
             <div class="flex items-center gap-4 mb-3">
               <img src="https://i.pravatar.cc/150?img=59" class="w-14 h-14 rounded-full object-cover">
               <div>
-                <h4 class="font-bold">Letícia Duarte</h4>
+                <h4 class="font-bold">Gustavo Fonseca</h4>
                 <p class="text-sm text-slate-500">Usuária verificada</p>
               </div>
             </div>
