--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -177,13 +177,13 @@
 
 <section class="py-16 bg-white relative overflow-hidden">
 
-  <!-- Selo -->
+  <!-- Selo
   <div class="text-center mb-8">
     <span class="inline-flex items-center gap-2 bg-emerald-100 text-emerald-700 px-4 py-2 rounded-full font-semibold text-sm shadow">
       ✔ Clientes Reais Verificados
     </span>
   </div>
-
+ -->
   <h2 class="text-3xl md:text-4xl font-extrabold text-center text-emerald-600 mb-3">
     O que nossos clientes dizem 💬✨
   </h2>
